--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -20,7 +20,7 @@ jobs:
     if: ${{ github.event.workflow_run.job1.outputs.output1 == 'hello' }}
     steps:
       - id: step1
-        run: echo ${{ github.event.workflow_run.job1.outputs.output1 }}
+        run: echo '${{ github.event.workflow_run.job1.outputs.output1 }}'
   job3:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.job2.outputs.output1 != 'world' }}
