--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -14,13 +14,13 @@ jobs:
       - id: step1
         run: echo running
       - id: step2
-        run: echo ${{ toJSON(github.event.workflow_run) }}
+        run: echo '${{ toJSON(github.event.workflow_run) }}'
   job2:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.job1.outputs.output1 == 'hello' }}
     steps:
       - id: step1
-        run: echo '${{ github.event.workflow_run.job1.outputs.output1 }}'
+        run: echo ${{ github.event.workflow_run.job1.outputs.output1 }}
   job3:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.job2.outputs.output1 != 'world' }}
