--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
+      - run: echo ${{ needs.job1.outputs.output1 }} ${{ needs.job1.outputs.output2 }}
       - run: echo '${{ toJSON(github) }}'
+      - run: echo '${{ toJSON(needs) }}'
